feat: Implementação do graphql
