# src/main/java/com/ms/agendamento/entrypoints/controllers/presenter/AgendamentoPresenter.java
@@ -1,9 +1,10 @@
 package com.ms.agendamento.entrypoints.controllers.presenter;
 
 import com.ms.agendamento.domain.model.AgendamentoDomain;
+import com.ms.agendamento.entrypoints.controllers.dtos.AgendamentoDto;
+import com.ms.agendamento.entrypoints.controllers.dtos.AgendamentoRequestDto;
 import com.ms.agendamento.entrypoints.controllers.mappers.AgendamentoDtoMapper;
-import com.ms.agendamentoDomain.gen.model.AgendamentoDto;
-import com.ms.agendamentoDomain.gen.model.AgendamentoRequestDto;
+
 
 import java.util.List;
 
@@ -15,5 +16,9 @@ public class AgendamentoPresenter {
 
     public static List<AgendamentoDto> toAgendamentoListDto(List<AgendamentoDomain> domains) {
         return AgendamentoDtoMapper.INSTANCE.toAgendamentoListDto(domains);
+    }
+
+    public static AgendamentoDto toAgendamentoDto(AgendamentoDomain agendamento) {
+        return AgendamentoDtoMapper.INSTANCE.toAgendamentoDto(agendamento);
     }
 }
